examples/test/testpolicy12093.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12093
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key25: value12
      key13: value39
      key1: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value1
          key39: value48
      podSelector:
        matchLabels:
          key33: value4
          key23: value25
